--- a/app/styles/_settings.global.scss
+++ b/app/styles/_settings.global.scss
@@ -1,3 +1,14 @@
 body {
   overflow-x: hidden;
 }
+
+
+
+.container-fluid {
+  padding-top: 20px;
+}
+
+
+.panel-group .panel {
+  border-radius: 0;
+}
