--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,5 +9,4 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/vendor/assets/font
 @import "settings.global";
 
 @import "components.navbar";
-
-
+@import "components.color";
