--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5097,11 +5097,18 @@ button.close {
 body {
   overflow-x: hidden; }
 
+.container-fluid {
+  padding-top: 20px; }
+
+.panel-group .panel {
+  border-radius: 0; }
+
 .navbar-default {
   border: none;
   background-color: #293c55;
   z-index: 13;
-  transition: background-color 0.5s linear; }
+  transition: background-color 0.5s linear;
+  padding-top: 0; }
   .navbar-default .nav-title {
     margin-left: 10px;
     display: inline-block;
@@ -5220,3 +5227,17 @@ body {
     display: block; }
   #nav-download {
     display: none; } }
+
+.colorpicker {
+  padding: 10px; }
+
+.color {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  margin-right: 5px;
+  cursor: pointer; }
+  .color:hover {
+    box-shadow: 0 0 5px #eee; }
