update echarts theme with color picker

--- a/app/styles/_configs.color.scss
+++ b/app/styles/_configs.color.scss
@@ -15,3 +15,5 @@ $clr-dark:           #666;
 $clr-light:          #999;
 $clr-lighter:        #eee;
 $clr-lightest:       #f9f9f9;
+
+$clr-border:         #ddd;
