--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,3 +10,4 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/vendor/assets/font
 
 @import "components.navbar";
 @import "components.color";
+@import "components.echarts";
