export and import theme

--- a/app/styles/_configs.color.scss
+++ b/app/styles/_configs.color.scss
@@ -16,4 +16,5 @@ $clr-light:          #999;
 $clr-lighter:        #eee;
 $clr-lightest:       #f9f9f9;
 
-$clr-border:         #ddd;
+$clr-border:         #eee;
+$clr-border-dark:    #ddd;
