--- a/app/styles/_components.echarts.scss
+++ b/app/styles/_components.echarts.scss
@@ -1,6 +1,10 @@
+.chart-container {
+  margin-bottom: 20px;
+}
+
 .ec-panel {
   width: 100%;
   height: 300px;
   border: 1px solid $clr-border;
-  margin-bottom: 10px;
+  margin-top: 10px;
 }
