--- a/app/styles/_components.config.scss
+++ b/app/styles/_components.config.scss
@@ -12,6 +12,10 @@
     }
   }
 
+  form + form {
+    margin-top: 10px;
+  }
+
   label {
     padding-right: 0;
   }
@@ -55,6 +59,7 @@
         border-radius: 0;
         color: $clr-primary;
         padding: 0;
+        transition: 0.5s;
 
         &:hover {
           background-color: $clr-lighter;
