--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,6 +4,8 @@ $icon-font-path: "../vendors/fonts/";
 @import "../bower_components/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap.scss";
 // endbower
 
+@import "../bower_components/bootstrap-colorpicker/dist/css/bootstrap-colorpicker.css";
+
 @import "configs.color";
 
 @import "settings.global";
