different settings for different type of axis

--- a/app/styles/_components.navbar.scss
+++ b/app/styles/_components.navbar.scss
@@ -13,6 +13,7 @@ $nav-height: 51px;
     padding: 16px 10px;
     color: $clr-lightest;
     text-decoration: none;
+    position: absolute;
   }
 
   .navbar-nav {
