--- a/app/styles/_components.echarts.scss
+++ b/app/styles/_components.echarts.scss
@@ -1,10 +1,14 @@
 .chart-container {
   margin-bottom: 20px;
+  padding: 15px;
 }
 
-.ec-panel {
-  width: 100%;
-  height: 300px;
-  border: 1px solid $clr-border;
-  margin-top: 15px;
-}
+  .ec-container {
+    padding: 0 15px 30px 15px;
+  }
+
+    .ec-panel {
+      width: 100%;
+      height: 300px;
+      box-sizing: border-box;
+    }
