add title for chart panel

--- a/app/styles/_components.echarts.scss
+++ b/app/styles/_components.echarts.scss
@@ -4,7 +4,11 @@
 }
 
   .ec-container {
-    padding: 0 15px 30px 15px;
+    padding: 0 0 30px 15px;
+
+    h3 {
+      margin-top: 20px;
+    }
   }
 
     .ec-panel {
