--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5465,7 +5465,9 @@ a {
   padding: 15px; }
 
 .ec-container {
-  padding: 0 15px 30px 15px; }
+  padding: 0 0 30px 15px; }
+  .ec-container h3 {
+    margin-top: 20px; }
 
 .ec-panel {
   width: 100%;
