--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5333,6 +5333,25 @@ a {
     border-color: #3a5477;
     background-color: #4a6d9a; }
 
+.scroll-parent {
+  position: absolute;
+  top: 50px;
+  bottom: 0;
+  left: 15px;
+  right: 15px;
+  overflow: hidden; }
+  .scroll-parent > div {
+    height: 100%;
+    overflow-y: auto; }
+    .scroll-parent > div::-webkit-scrollbar {
+      width: 5px;
+      background-color: #f9f9f9; }
+    .scroll-parent > div::-webkit-scrollbar-thumb {
+      background-color: #e6e6e6;
+      border-radius: 2.5px; }
+    .scroll-parent > div:hover::-webkit-scrollbar-thumb {
+      background-color: #d9d9d9; }
+
 .navbar-default {
   border: none;
   background-color: #293c55;
