--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,3 +14,4 @@ $icon-font-path: "../vendors/fonts/";
 @import "components.echarts";
 @import "components.config";
 @import "components.color";
+@import "components.code";
