--- a/app/styles/_configs.color.scss
+++ b/app/styles/_configs.color.scss
@@ -4,7 +4,7 @@ $clr-primary-dark:   #162436;
 $clr-primary-darker: #0e151f;
 
 $clr-secondary:      #a9334c;
-$clr-thirdary:       #3095c6;
+$clr-thirdary:       #61a0a8;
 
 $clr-contrast:       #e43c59;
 $clr-contrast-dark:  #bf465b;
