--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,10 +1,8 @@
 $icon-font-path: "../vendors/fonts/";
 
-// bower:scss
 @import "../bower_components/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap.scss";
-// endbower
-
 @import "../bower_components/bootstrap-colorpicker/dist/css/bootstrap-colorpicker";
+@import "../vendors/highlight.github";
 
 @import "configs.color";
 
