--- a/app/styles/_components.config.scss
+++ b/app/styles/_components.config.scss
@@ -92,7 +92,7 @@
 
         .panel-title a {
           display: block;
-          padding: 10px;
+          padding: 10px 16px;
           text-decoration: none !important;
         }
 
