--- a/app/styles/_components.config.scss
+++ b/app/styles/_components.config.scss
@@ -1,3 +1,5 @@
+
+#theme-builder {
 .icon {
   color: $clr-primary;
 }
@@ -141,3 +143,4 @@
       display: inline-block;
       border-radius: 3px;
     }
+}
