--- a/app/styles/_components.config.scss
+++ b/app/styles/_components.config.scss
@@ -18,6 +18,10 @@
   border-right: 1px solid $clr-border-dark;
   border-bottom: 1px solid $clr-border-dark;
 
+  h5 {
+    margin: 10px;
+  }
+
   .form-group .col-sm-3 {
     padding-right: 0;
     text-align: right;
