--- a/app/styles/_settings.global.scss
+++ b/app/styles/_settings.global.scss
@@ -27,6 +27,7 @@ $nav-height: 50px;
   }
 
   .btn-primary {
+    color: #fff;
     border-color: lighten($clr-primary, 5%);
     background-color: lighten($clr-primary, 10%);
 
